# Workstation

./: .env.example  .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  shortcut-hint.html  test-window.html  todo.md  vite.config.ts
Python/: README.md  README_Calendar.md  requirements-calendar.txt
Python/examples/: calendar_manager.py  data_processor.py  file_handler.py  hello.py
docs/: BatchSelectionFeature.md  CSVViewerBackendRefactor.md  CSVViewerDebug.md  CSVViewerPaginationRefactor.md  CSVViewerQuickStart.md  CalendarMigrationReport.md  CalendarQuickStart.md  CalendarToolUpdate.md  ComponentReorganization.md  CustomTitleBar.md  DragAndDropCategoryFeature.md  FileStructureAnalysis.md  GoogleCalendarSetup.md  GoogleOAuthFix.md  PythonToolQuickFix.md  PythonToolTroubleshooting.md  SettingsImplementation.md  ShortcutReminderBackend.md  ThemeImplementation.md  ThemeSystem.md  ToolStateAPI.md  ToolsAutoRegistration.md  ToolsMigrationGuide.md  VSCodeStyleUI.md  WSLBridgeOps.md
docs/AI/: ARCHITECTURE.md
docs/App/: AppFrameworkGuide.md  DevRoadmap.md  FileReorganization.md  OptimizationReport.md  TitleBarEnhancement.md  TitleBarIconsRefactor.md
docs/Timetracker/: TimeTrackRefactor.md  TimeTrackRouteFix.md
scripts/wsl-bridge/: invoke-local-wsl.ps1  (+3 more)
src/: App.module.css  App.tsx  index.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_paths.rs  csv_handler.rs  db.rs  lib.rs  main.rs  spectrum.rs  tracker.rs
src-tauri/src/features/: spectrum.rs
src-tauri/src/handlers/: csv_handler.rs  parquet_handler.rs
src-tauri/src/pdf_library/: commands.rs  database.rs  file_ops.rs  metadata.rs  mod.rs  watcher.rs
src-tauri/src/services/: python.rs  shortcut.rs  ssh.rs
(+200 files in other folders)
